--- a/lessons.html
+++ b/lessons.html
@@ -1264,12 +1264,12 @@ app.factory('SharedState', function($http, $q) {
                 id: 18,
                 title: 'Transposición',
                 icon: 'library_books',
-                activity:[{
+                activity:[/*{
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
                   url: 'https://www.youtube.com/embed/'
-                  },
+                  },*/
                   {
                   icon: 'description',
                   type: 'Ejercicios',
@@ -1281,14 +1281,14 @@ app.factory('SharedState', function($http, $q) {
               },
               {
                 id: 19,
-                title: 'Pieza: Allegro',
+                title: 'Pieza: Allegretto',
                 icon: 'audio_file',
-                activity:[{
+                activity:[/*{
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
                   url: 'https://www.youtube.com/embed/'
-                  },{
+                  },*/{
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
@@ -1316,7 +1316,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/rPhyBb-JX5o'
                   },
                   {
                   icon: 'description',
@@ -1330,12 +1330,12 @@ app.factory('SharedState', function($http, $q) {
                 id: 21,
                 title: 'Marcas de Tempo y Dinámicas',
                 icon: 'library_books',
-                activity:[{
+                activity:[/*{
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
                   url: 'https://www.youtube.com/embed/'
-                  },
+                  },*/
                    {
                   icon: 'auto_stories',
                   type: 'Teoría',
@@ -1352,7 +1352,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/_d3u8RY1kNc'
                   },{
                   icon: 'description',
                   type: 'Partitura',
@@ -1369,12 +1369,12 @@ app.factory('SharedState', function($http, $q) {
                 id: 23,
                 title: 'Definición y ejercicios',
                 icon: 'library_books',
-                activity:[{
+                activity:[/*{
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
                   url: 'https://www.youtube.com/embed/'
-                  },{
+                  },*/{
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
@@ -1391,7 +1391,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/FivvBFEW1a0'
                   },{
                   icon: 'description',
                   type: 'Partitura',
@@ -1413,7 +1413,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/jGM_qOcewYg'
                   },
                   {
                   icon: 'auto_stories',
@@ -1438,7 +1438,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/il7CTAteqhE'
                   },{
                   icon: 'description',
                   type: 'Partitura',
@@ -1459,7 +1459,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/edjG-czdX2Y'
                   },
                   {
                   icon: 'description',
@@ -1477,7 +1477,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/09dONQwMtv8'
                   },{
                   icon: 'description',
                   type: 'Partitura',
