--- a/lessons.html
+++ b/lessons.html
@@ -1520,7 +1520,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Descripción',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/sn9AnIwXWNw'
                   },{
                   icon: 'description',
                   type: 'Ejercicios',
@@ -1537,7 +1537,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/gtkAYv5wBoA'
                   },{
                   icon: 'description',
                   type: 'Ejercicio',
@@ -1554,7 +1554,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/MEN8YH8Kr4Q'
                   },{
                   icon: 'description',
                   type: 'Partitura',
@@ -1576,7 +1576,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Descripción',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/-G5yINx85k0'
                   },{
                   icon: 'description',
                   type: 'Ejercicios',
