--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
-<link rel="icon" href="https://lh3.googleusercontent.com/d/1k9LA88h-FVVn9EeryBRVBrtc5tPl92CK" type="image/x-icon">
+<link rel="icon" href="https://lh3.googleusercontent.com/d/16vmyfZfuuu5p9xT57X_CANKBjDTA-f-S" type="image/x-icon">
     <title>Taller de Piano</title>
    
     <meta name="google-signin-client_id" content="613538890545-o4p4ft7oji6uhimgh0inqn5l5cgv1gnm.apps.googleusercontent.com">
@@ -37,7 +37,7 @@ h1 {
 
 
 .intro-section {
-  background-image: url(https://lh3.googleusercontent.com/d/17I7Hj3GVuvid8OnM_KTt8FrwrqUDFDYv);
+  background-image: url(https://lh3.googleusercontent.com/d/1VoRvfiHUpjUJUhDmzvD02QhBWN0m0Lnh);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -499,13 +499,13 @@ h1 {
 <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6 col-md-7 intro-section">
-          <div class="brand-wrapper strong-shadow" >
+          <div class="brand-wrapper strong-shadow" style="margin-left: -30px;">
             <h1>Taller de Piano</h1>
           </div>
-          <div class="intro-content-wrapper">
+          <div class="intro-content-wrapper" style="margin-left: -30px;">
         <br><br>
-            <h1 class="intro-title strong-shadow">Bienvenido al mundo del Piano!</h1>
-            <p class="intro-text strong-shadow">En Mozart Academy, te ofrecemos clases adaptadas a tus necesidades y horarios, ya seas principiante o avanzado.</p>
+            <h1 class="intro-title strong-shadow">Bienvenido al Taller de Piano!</h1>
+            <p class="intro-text strong-shadow">En este curso obtendrás una lectura fluida de partituras y por consecuencia limpieza en la interpretación de piezas.</p>
           
           </div>
         <!--  <div class="intro-section-footer" style="margin-top: 40px;">
