--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ function registration(button) {
 $(window).on('load', function() { 
   var storedToken = localStorage.getItem('MStoken');
   if (storedToken) {
-    window.location.href = 'https://admin.mozartacademy.mx/main'
+    window.location.href = 'https://cubiculociencias.github.io/tallerdepiano/main'
   } 
 });
 
