--- a/index.html
+++ b/index.html
@@ -493,6 +493,13 @@ h1 {
     stroke: #ffa700;
   }
 }
+
+
+   @media (min-width: 1000px){
+     .intro-content-wrapper{
+      margin-top: 280px ;
+    }
+  }
 </style>
 
 
