--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ h1 {
           <div class="intro-content-wrapper" style="margin-left: -30px;">
         <br><br>
             <h1 class="intro-title strong-shadow">Bienvenido al Taller de Piano!</h1>
-            <p class="intro-text strong-shadow">En este curso obtendrás una lectura fluida de partituras y por consecuencia limpieza en la interpretación de piezas.</p>
+            <p class="intro-text strong-shadow">En este curso te guiaremos paso a paso para que adquieras una lectura fluida de partituras y en consecuencia limpieza en la interpretación de piezas. Inicia tu formación hoy!</p>
           
           </div>
         <!--  <div class="intro-section-footer" style="margin-top: 40px;">
