--- a/main.html
+++ b/main.html
@@ -508,8 +508,7 @@ body {
          <a class="item"> 
 					Horario de clase
            <span class="item-note"  style=" margin-top: 3px;">{{userData.plan}}</span>
-			<p>{{userData.classtime[0]}}</p>   
-         	<p>{{userData.classtime[1]}}</p>   
+			<p>{{userData.classtime}}</p>   
 				</a>
          <div class="item item-divider itemDividerforitem">Asistencias</div>
          
