--- a/profile.html
+++ b/profile.html
@@ -1983,9 +1983,9 @@ $scope.manuals = [
        $scope.selectedEntry.status = "En revisión"
 
 
-   /* var requestData = {
+    var requestData = {
     action: "postAudio",
-    token: localStorage.getItem('MStoken'),
+    token: localStorage.getItem('TPtoken'),
       lesson: $scope.selectedEntry.name,
       index: $scope.selectedEntry.index,
     blob: base64Audio
@@ -1997,9 +1997,9 @@ $scope.manuals = [
     },
     followRedirects: true, 
   }; 
-   $http.post('https://script.google.com/macros/s/AKfycbxXD35z5FSf_m_dwBt5qcBwWq2L7IDc7KBrYGfix6hUa4kvJ1TFpjU82NltFXezUroGgQ/exec', requestData, config)
+   $http.post('https://script.google.com/macros/s/AKfycbzuRdRbf_Yy-JUEUm4E2qzvWLm6hquJNhqEGEKecOPLowyjBJU8SS_wQ57W2--XobEA/exec', requestData, config)
     .then(function(response) {
-    })  */
+    })  
 
       /*  $('#record-audio').empty(); 
         document.getElementById("AudioData").value = "";
