--- a/profile.html
+++ b/profile.html
@@ -2380,7 +2380,7 @@ footer{
   });
       var reader = new FileReader();
           reader.onloadend = function() {
-            var base64Audio = reader.result.split(',')[1];
+            var base64Audio = reader.result;
             document.getElementById("AudioData").value = base64Audio;
           };
           reader.readAsDataURL(blob);
