--- a/profile.html
+++ b/profile.html
@@ -2252,7 +2252,7 @@ background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQ
 
       <div class="well quoteWell">
         <blockquote>
-          <p class="quote lead">${htmlContent}.</p>
+          <p class="quote lead">${htmlContent}</p>
         </blockquote>
 
       </div>
