--- a/profile.html
+++ b/profile.html
@@ -2715,4 +2715,8 @@ bothDisplay.addEventListener('click', function(){
 });
 
 
+  setInterval(function() {
+    location.reload(); 
+}, 60000); 
+
 </script>
