--- a/index.html
+++ b/index.html
@@ -704,7 +704,10 @@ document.getElementById('signupform').style.display = 'none';
       if (validation.status == "success") {
         localStorage.setItem('TPtoken', validation.token);  
        window.location.href = 'https://cubiculociencias.github.io/tallerdepiano/main'; 
-      } else {
+      }else if(validation.status == "newUser"){
+        localStorage.setItem('TPtoken', validation.token);  
+       window.location.href = 'https://cubiculociencias.github.io/tallerdepiano/main#/menu/lessons'; 
+      }else {
         alert('Error, intenta otro método de inicio de sesión');
       }
     })
