--- a/lessons.html
+++ b/lessons.html
@@ -2617,7 +2617,7 @@ var app = angular.module('materializeApp', ['ui.materialize']);
 app.factory('SharedState', function($http, $q) {
   var requestData = {
     action: "getBasicData",
-    token: "U2FsdGVkX18Y3Ikd7Ppb+2aVdv2AgN/p1JCgChHIAXGylvVbAToWW9G0M2yhM3aa"
+    token: localStorage.getItem('TPtoken')
   };
 
   var config = {
