--- a/lessons.html
+++ b/lessons.html
@@ -1813,7 +1813,7 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos"> 
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-         <button class="progressbtn" ng-if="status !== 'ACTIVO'"> Inscribirse </button>   
+         <button class="progressbtn" ng-if="status !== 'ACTIVO'"  href="#/menu/manuals"> Inscribirse </button>   
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
