--- a/lessons.html
+++ b/lessons.html
@@ -1813,7 +1813,7 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos"> 
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-         <button class="progressbtn" ng-if="status !== 'ACTIVO'"  href="#/menu/manuals"> Inscribirse </button>   
+         <button class="progressbtn" ng-if="status !== 'ACTIVO'" ng-click="navigateToManuals()"> Inscribirse </button>   
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
@@ -2662,7 +2662,10 @@ app.factory('SharedState', function($http, $q) {
       
       $scope.loading = false;
   })
-  
+
+   $scope.navigateToManuals = function() {
+    $location.path('/menu/manuals');
+  };
 
   function filterCurrent(obj) {
     return obj.filter(function(entry) {
