--- a/lessons.html
+++ b/lessons.html
@@ -2664,7 +2664,7 @@ app.factory('SharedState', function($http, $q) {
   })
 
    $scope.navigateToManuals = function() {
-    $location.path('/menu/manuals');
+    $location.path('/profile');
   };
 
   function filterCurrent(obj) {
