--- a/lessons.html
+++ b/lessons.html
@@ -1937,7 +1937,7 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-        <button class="progressbtn"> ver progreso </button>   
+        <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';"> ver progreso </button>   
       </div>  
      
       <div class="job-explain-content"> 
@@ -2021,7 +2021,7 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-          <button class="progressbtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/profile';" > Inscribirse </button>  
+          <button class="progressbtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" > Inscribirse </button>  
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
