--- a/lessons.html
+++ b/lessons.html
@@ -2021,7 +2021,7 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-       <button class="progressbtn">  <a href="https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment" style="color: white; text-decoration: none;">Inscribirse </a></button> 
+     <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';"> ver progreso </button>  
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
