--- a/main.html
+++ b/main.html
@@ -150,7 +150,7 @@ body {
             overflow: hidden;
             max-width: 100%;
             /*height:  88vh;*/
-	    height: 100vh;
+	    height: 100%;
         }
 
 
