--- a/lessons.html
+++ b/lessons.html
@@ -3053,14 +3053,16 @@ app.factory('SharedState', function($http, $q) {
                   type: 'Lección',
                   media: 'video',
                   url: 'https://www.youtube.com/embed/qh-4OyTcuJw'
-                  },{
+                  },
+            /*{
                   title: 'Intervalos de 4ta y 5ta',
                   icon: 'quiz',
                   type: 'Block Test',
                   media: 'quiz',
                   package: 2
-                  },{
-                  title: 'Intervalos de 2da y 3era',
+                  },*/
+                {
+                  title: 'Ritmo y métrica',
                   icon: 'bolt',
                   type: 'Quick Test',
                   media: 'quiz',
