--- a/lessons.html
+++ b/lessons.html
@@ -5673,22 +5673,49 @@ function startQuiz(lvl, title, subtitle, datapackage, icon) {
   
   if(datapackage == 1){
    questions = [
-    {
-      question: "What is Earth's largest continent?",
-      img: "https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8",
-      answers: ["Asia", "Africa", "Antarctica", "Europe"],
-      correctAnswer: 1
+       {
+      question: "¿Nombre de la herramiento musical que permite gradual el tiempo?",
+      img: "",
+      answers: ["Reloj", "Cronómetro", "Metronemo", "Metrónomo"],
+      correctAnswer: 4
     },
     {
-      question: "Which of these countries is NOT part of the European Union?",
+      question: "¿Cómo se le llama a este parámetro musical?",
+      img: "https://lh3.googleusercontent.com/d/1DI-QO9klmH-QUpKAN1Re-Wj8Y4RQ6oKs",
+      answers: ["Ritmo", "Métrica", "Tempo", "Metro"],
+      correctAnswer: 2
+    }, {
+      question: "¿Cuantos clicks de metronomo dura esta nota?",
+      img: "https://lh3.googleusercontent.com/d/1C12iR5SYfg-2gwPO1jjarmkRO4BwPOnB",
+      answers: ["2", "3", "1", "4"],
+      correctAnswer: 2
+    },
+    {
+      question: "¿Cuantas teclas tiene un piano?",
       img: "",
-      answers: ["Spain", "Germany", "Russia", "Italy"],
+      answers: ["85", "80", "88", "78"],
+      correctAnswer: 3
+    },
+        {
+      question: "¿Cuál debe ser la métrica?",
+      img: "https://lh3.googleusercontent.com/d/12ZXAwhvjV1t5rnODPdV_5l-9RNR9aOZp",
+      answers: ["2/4", "3/4", "4/4", "1/2"],
       correctAnswer: 3
     },
     {
-      question: "What is the capital of Romania?",
+      question: "¿Cómo se mide la velocidad de un metrónomo?",
        img: "",
-      answers: ["Kiev", "Bucharest", "Budapest", "Chisinau"],
+      answers: ["En BPM", "En segundos", "Con clicks", "En BBM"],
+      correctAnswer: 1
+    },  {
+      question: "¿Cual es la traducción de measure al español?",
+      img: "https://lh3.googleusercontent.com/d/16pxirb4CtxRLx3PSNMNpgvEBdtBbAq9f",
+      answers: ["Medida", "Compás", "Medir", "Sección"],
+      correctAnswer: 2
+    },  {
+      question: "¿Cuantos clicks de metrónomo dura esta nota?",
+      img: "https://lh3.googleusercontent.com/d/1C12iR5SYfg-2gwPO1jjarmkRO4BwPOnB",
+      answers: ["2", "3", "1", "4"],
       correctAnswer: 2
     }
   ];
