--- a/lessons.html
+++ b/lessons.html
@@ -5674,7 +5674,7 @@ function startQuiz(lvl, title, subtitle, datapackage, icon) {
   if(datapackage == 1){
    questions = [
        {
-      question: "¿Nombre de la herramiento musical que permite gradual el tiempo?",
+      question: "¿Nombre de la herramienta musical que gradua el tiempo?",
       img: "",
       answers: ["Reloj", "Cronómetro", "Metronemo", "Metrónomo"],
       correctAnswer: 4
