--- a/lessons.html
+++ b/lessons.html
@@ -5713,10 +5713,10 @@ function startQuiz(lvl, title, subtitle, datapackage, icon) {
       answers: ["Medida", "Compás", "Medir", "Sección"],
       correctAnswer: 2
     },  {
-      question: "¿Cuantos clicks de metrónomo dura esta nota?",
+      question: "¿Que indice tiene la nota C central?",
       img: "https://lh3.googleusercontent.com/d/1C12iR5SYfg-2gwPO1jjarmkRO4BwPOnB",
-      answers: ["2", "3", "1", "4"],
-      correctAnswer: 2
+      answers: ["C4", "C5", "C3", "C1"],
+      correctAnswer: 1
     }
   ];
  }
