--- a/lessons.html
+++ b/lessons.html
@@ -1987,7 +1987,7 @@ input[type="radio"]:checked + label.green-bg::after {
       
       <ul class="collapsible popout" data-collapsible="accordion" ng-if="lesson.showButton ">
      <div class="linehorizontal"></div>        
-        <li ng-repeat="material in lesson.material" class="container-lessons" ng-if="(lvl > 0 || lesson.id <= lsn) && status === 'ACTIVO'">
+        <li ng-repeat="material in lesson.material" class="container-lessons" ng-if="((lesson.id <= lsn && lvl == 0) || lvl > 0) && status === 'ACTIVO'">
           <div class="collapsible-header">
    <i class="material-icons" >{{material.icon}}</i>
             {{material.title}}<span class="secondary-content"></span></div>
