--- a/payment.html
+++ b/payment.html
@@ -371,8 +371,8 @@ input[type="radio"]:checked + .option h3{
           <h4 class="price">$150 MXN <span style="font-size: 13px;">/mes</span></h4>
             <div class="details">
               <div class="text">
-                <h4>Piano sin límites</h4>
-                <p>Desbloquea lecciones.</p>
+                <h4>Curso de piano Asíncrono</h4>
+                <p>Avanza a tu ritmo y desbloquea nuevas lecciones.</p>
               </div>
                            <button class="detail_button" onclick="openPaymentInfoModal(2)">Inscribir</button>
           </div>
@@ -382,11 +382,11 @@ input[type="radio"]:checked + .option h3{
         <input type="radio" name="option" id="advanced">
         <label class="option" for="advanced">
           <img src="https://i.ibb.co/c8xTZFM/Whats-App-Image-2022-05-27-at-8-42-00-AM.jpg" alt="advanced" />
-           <h4 class="price">$1500 MXN</h4>
+           <h4 class="price">$450 MXN<span style="font-size: 13px;">/mes</span></h4>
             <div class="details">
               <div class="text">
-                <h4>Acceso Total</h4>
-                <p>Desbloquea y accede a todo nuestro contenido sin restricciones de por vida.</p>
+                <h4>Acceso PREMIUM</h4>
+                <p>Desbloquea y accede a todos nuestros cursos.</p>
               </div>
                           <button class="detail_button" onclick="openPaymentInfoModal(3)">Inscribir</button>
           </div>
