--- a/lessons.html
+++ b/lessons.html
@@ -4505,12 +4505,12 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/v1e-4OnBlI0'
                   },{
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1KC_u0nOi-PjotEKLGuEAPDXiDEJvDUwA/preview'
                   }
                 ]
               },
@@ -4521,12 +4521,12 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/1NEYTaHqk_4'
                   },{
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1WhaTn70R8qil68wjWdMAmLfa6Ij77dzC/preview'
                   }
                 ]
               }
