--- a/lessons.html
+++ b/lessons.html
@@ -1272,7 +1272,7 @@ iframe#quiz {
   -webkit-transition: 0.5s all;
   -o-transition: 0.5s all;
   transition: 0.5s all;
-  
+  background-color: #E6EAEF;
 }
 
 
